# FlappyBird

./: AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  FlappyBird  Flash.cpp  Flash.hpp  GameLoop.cpp  GameLoop.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  Hud.cpp  Hud.hpp  InputManger.cpp  InputManger.hpp  Land.cpp  Land.hpp  MainMenuState.hpp  MainMenueState.cpp  Pipe.cpp  Pipe.hpp  SplashState.cpp  SplashState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  compile_commands.json  definitions.hpp  main.cpp  tags
